blocked SPP compiled code

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ Watch/ProjectCCS/RAM
 Watch/Project/settings/Watch.cspy.bat
 Watch/Project/settings/Watch.dbgdt
 Watch/Project/settings/Watch.dni
-
+Watch/ProjectCCS/SPP
 
